--- a/CV.html
+++ b/CV.html
@@ -1,11 +1,11 @@
- <!DOCTYPEhtml>
+<!DOCTYPE html>
 <html lang='en'>
   <head>
     <meta charset='UTF-8' />
     <title>Floats</title>
     <link rel='stylesheet' href='styles.css'/>
   </head>
-<body class="body">
+<body>
     <img src="./img/jul.jpg" alt="foto jul">
 
     <h1>IULIIA INIAKINA</h1>
